Fix section margins and spacing

--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ h1 {
 }
 
 .section {
-  margin: 20px auto;
+  margin: 50px 20px;
 }
 
 /* #map {
